<resources>
    <string name="app_name">CosmoNote</string>
    <string name="app_widget_name">CosmoNote 📝"</string>
    <string name="enter_4_digits">Entrez votre PIN à 4 chiffres</string>
    <string name="pin_must_be_4_digits">Le PIN doit comporter 4 chiffres</string>
    <string name="pin_set_welcome">PIN enregistré. Bienvenue !</string>
    <string name="incorrect_pin">PIN incorrect</string>
    <string name="delete_note_confirmation_title">Confirmer la suppression</string>
    <string name="delete_note_confirmation_message">Êtes-vous sûr de vouloir supprimer cette note ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="note_deleted">Note supprimée</string>
    <string name="delete_failed">Échec de la suppression</string>
    <string name="enter_old_pin">Entrez l\'ancien PIN</string>
    <string name="enter_new_pin">Entrez le nouveau PIN</string>
    <string name="confirm_new_pin">Confirmez le nouveau PIN</string>
    <string name="change_pin">Changer le PIN</string>
    <string name="parameters">Paramètres</string>
    <string name="pins_do_not_match">Les PIN ne correspondent pas</string>
    <string name="no_pin_set">Aucun PIN défini</string>
    <string name="incorrect_old_pin">Ancien PIN incorrect</string>
    <string name="pin_changed_success">PIN modifié avec succès</string>
    <string name="add_note">"Ajouter une note"</string>
    <string name="delete_all_notes">Supprimer toutes les notes</string>
    <string name="delete_all_notes_confirmation_title">Tout supprimer</string>
    <string name="delete_all_notes_confirmation_message">Êtes-vous sûr de vouloir supprimer toutes les notes ?</string>
    <string name="all_notes_deleted">Toutes les notes ont été supprimées</string>
    <string name="delete_current_tab_confirmation_title">Supprimer les notes de l\'onglet</string>
    <string name="delete_local_notes_confirmation_message">Supprimer toutes les notes locales ?</string>
    <string name="delete_synced_notes_confirmation_message">Supprimer toutes les notes synchronisées ?</string>
    <string name="local_notes_deleted">Notes locales supprimées</string>
    <string name="synced_notes_deleted">Notes synchronisées supprimées</string>
    <string name="title">Titre</string>
    <string name="note_content">Contenu de la note</string>
    <string name="save">Sauvegarder</string>
    <string name="delete">Supprimer</string>
    <string name="share">Partager</string>
    <string name="note_empty">La note est vide</string>
    <string name="share_note_with">Partager la note via</string>
    <string name="title_empty">Le titre ne doit pas être vide</string>
    <string name="note_added">Note ajoutée</string>
    <string name="note_updated">Note modifiée</string>
    <string name="new_note">➕ Nouvelle note</string>
    <string name="modify_pin_error">Erreur lors du changement de PIN</string>
    <string name="modify_color">Modifier la couleur</string>
    <string name="shared_user_id">ID Firebase de l\'utilisateur partagé</string>
    <string name="shared_user_id_saved">UID sauvegardé</string>
    <string name="share_with_user">Partager mes notes</string>
    <string name="firebase_login">Login</string>
    <string name="email_address">Email</string>
    <string name="password">Mot de passe</string>
    <string name="log_in">Se connecter</string>
    <string name="log_out">Se déconnecter</string>
    <string name="register">S\'inscrire</string>
    <string name="delete_share">Supprimer le partage</string>
    <string name="email_required">Email requis</string>
    <string name="password_required">Mot de passe requis</string>
    <string name="connect_success">Connexion réussie</string>
    <string name="disconnect_success">Déconnexion réussie</string>
    <string name="disconnect_error">Erreur lors de la déconnexion</string>
    <string name="connect_error">Erreur connexion : </string>
    <string name="password_required_minimum">Mot de passe requis (6 caractères minimum)</string>
    <string name="register_success">Inscription réussie</string>
    <string name="register_error">Erreur Inscription : </string>
    <string name="message_logged_to_share">Vous devez être connecté pour partager</string>
    <string name="enter_user_uid">Entrez un UID utilisateur</string>
    <string name="cant_share_with_yourself">Vous ne pouvez pas partager avec vous-même</string>
    <string name="message_logged_to_delete">Vous devez être connecté pour supprimer le partage</string>
    <string name="message_connect_to_share">Vous devez être connecté pour synchroniser les notes</string>
    <string name="share_saved">Partage sauvegardé</string>
    <string name="share_save_error">Erreur sauvegarde partage : </string>
    <string name="share_deleted">Partage supprimé</string>
    <string name="share_delete_error">Erreur suppression partage : </string>
    <string name="send">Envoyer</string>
    <string name="current_id">Votre ID utilisateur actuel : </string>
    <string name="my_current_id">Mon ID utilisateur : </string>
    <string name="share_id_with">Partager votre ID via</string>
    <string name="load_notes_error">Erreur lors du chargement des notes</string>
    <string name="new_note_from_distant">Nouvelle note créée</string>
    <string name="settings">Paramètres</string>
    <string name="create">Créer</string>
    <string name="cancel">Annuler</string>
    <string name="please_fill_all">Veuillez remplir tous les champs</string>
    <string name="firebase_connection">Connexion Firebase</string>
    <string name="create_account">Créer un compte</string>
    <string name="create_new_user">Créer un nouvel utilisateur pour partager les notes</string>
    <string name="login_with_email_password">Connexion avec e-mail et mot de passe</string>
    <string name="logging_out_firebase">Déconnexion de Firebase</string>
    <string name="sharing_notes">Partage des notes</string>
    <string name="remote_user_uid">UID utilisateur distant</string>
    <string name="share_id_title">Envoyer mon UID</string>
    <string name="share_id_summary">Copier ou envoyer mon UID à un autre utilisateur</string>
    <string name="save_sharing_title">Activer le partage</string>
    <string name="save_sharing_summary">Activer le partage avec cet utilisateur</string>
    <string name="delete_sharing_title">Supprimer le partage</string>
    <string name="delete_sharing_summary">Supprimer l\'UID lié</string>
    <string name="uid_to_share_notes_with">UID Firebase avec qui partager vos notes</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Activer les notifications</string>
    <string name="receive_notifications_from_app">Recevoir des notifications de l\'application</string>
    <string name="sharing_enabled_with">Partage avec : </string>
    <string name="manage_sharing_title">Gérer les partages</string>
    <string name="manage_sharing_summary">Voir, ajouter ou supprimer des utilisateurs partagés</string>
    <string name="no_shared_users">Aucun utilisateur partagé</string>
    <string name="add_shared_user">Ajouter un utilisateur</string>
    <string name="enter_uid_to_share">Entrez l\'UID de l\'utilisateur à ajouter</string>
    <string name="share_removed">Partage supprimé</string>
    <string name="app_version">Version</string>
    <string name="category_appearance">Apparence</string>
    <string name="category_security">Sécurité</string>
    <string name="enable_pin">Activer le code PIN</string>
    <string name="enable_pin_summary">Protéger l\'accès à l\'application par un code PIN</string>
    <string name="change_pin_title">Changer le code PIN</string>
    <string name="change_pin_summary">Modifier votre code PIN actuel</string>
    <string name="pin_activated">Code PIN activé</string>
    <string name="pin_deactivated">Code PIN désactivé</string>
    <string name="set_pin_title">Définir un code PIN</string>
    <string name="enter_pin_message">Entrez un code PIN à 4 chiffres</string>
    <string name="about">A propos</string>
    <string name="privacy_policy_title">Politique de confidentialité</string>
    <string name="privacy_policy_summary">Consulter notre politique de confidentialité</string>
    <string name="privacy_policy_url">https://nicob-droid.github.io/NoteBlock/privacy-policy.html </string>
    <string name="share_method_title">Comment partager ?</string>
    <string name="share_generate_code">Générer un code de partage</string>
    <string name="share_enter_code">Rejoindre avec un code</string>
    <string name="share_code_title">Votre code de partage</string>
    <string name="share_code_message">Envoyez ce code à l\'autre utilisateur. Il est valable 10 minutes :</string>
    <string name="share_code_expires">Ce code expire dans 10 minutes.</string>
    <string name="share_code_invite">Rejoignez-moi sur CosmoNote avec le code :</string>
    <string name="share_enter_code_title">Rejoindre avec un code</string>
    <string name="share_enter_code_hint">Code à 6 caractères (ex: AB3X9K)</string>
    <string name="share_code_invalid">Le code doit comporter exactement 6 caractères</string>
    <string name="share_code_not_found">Code introuvable. Vérifiez et réessayez.</string>
    <string name="share_code_expired">Ce code a expiré. Demandez un nouveau code.</string>
    <string name="share_copy_code">Copier</string>
    <string name="share_via">Partager via…</string>
    <string name="share_code_copied">Code copié dans le presse-papier</string>
    <string name="theme_title">Thème de l\'application</string>
    <string name="theme_summary">Choisissez clair, sombre ou automatique</string>
    <string name="background_image_title">Image d\'arrière-plan</string>
    <string name="background_image_summary">Choisir une image pour le fond de l\'écran des notes</string>
    <string name="background_image_selected_summary">Image sélectionnée</string>
    <string name="background_image_not_selected_summary">Aucune image sélectionnée</string>
    <string name="background_image_remove_title">Supprimer l\'image d\'arrière-plan</string>
    <string name="background_image_remove_summary">Revenir au fond par défaut</string>
    <string name="background_image_pick_error">Impossible d\'ouvrir cette image</string>
    <string name="background_image_saved">Image d\'arrière-plan enregistrée</string>
    <string name="background_image_removed">Image d\'arrière-plan supprimée</string>
    <string name="tab_local_notes">Locales</string>
    <string name="tab_synced_notes">Partagées</string>
    <string name="note_locked_unavailable">Cette note est en cours d\'édition.</string>
    <string name="note_locked_by_user">Verrouillée par %1$s</string>
    <string name="someone_label">quelqu\'un</string>
    <string name="note_lock_take_failed">Impossible d\'ouvrir: note en cours d\'édition par %1$s.</string>
    <string name="note_lock_take_failed_generic">Impossible d\'ouvrir cette note pour le moment.</string>
    <string name="note_status_local">Locale</string>
    <string name="note_status_synced">Synchronisée</string>
    <string name="note_status_synced_private">Synchronisée (non partagée)</string>
    <string name="note_status_synced_from_user">Synchronisée depuis : %1$s</string>
    <string name="note_status_shared_with_users">Partagée avec : %1$s</string>
     <string name="share_note_actions_title">Partager la note</string>
     <string name="sync_note_first_option">Synchroniser cette note</string>
     <string name="share_note_text_option">Partager le texte</string>
     <string name="manage_note_access_option">Gérer l\'accès</string>
     <string name="manage_note_access_requires_synced">Synchronisez d\'abord cette note pour gérer l\'accès.</string>
     <string name="manage_note_access_owner_only">Seul le propriétaire peut gérer l\'accès.</string>
     <string name="manage_note_access_dialog_title">Qui peut accéder à cette note ?</string>
</resources>