<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/old_pin_input"
        android:hint="@string/enter_old_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/new_pin_input"
        android:hint="@string/enter_new_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/confirm_new_pin_input"
        android:hint="@string/confirm_new_pin"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_change_pin"
        android:text="@string/change_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>
</LinearLayout>
